[b]Version 0.5.62[/b] (not released yet):

(2007-10-30)
 * Changed the layout of some sections in preferences to make them smaller.

(2007-10-29)
 * (Experimental) Enable or disable some actions according to the current state.
   For example, the audio actions should be disabled if the file has no audio
   track.
 * (Fix) The time slider goes to 0 if the user press stop twice.

(2007-10-26)
 * (Internal change) Renamed font_textscale in preferences to initial_sub_scale.
 * Assigned the new actions to change font size to the keys Shift+R (Size-) and
   Shift+T (Size+).
 * (Experimental) Now it's possible to dock the playlist on the left and right
   sides of the main window.

(2007-10-25)
 * Now the -nostop-xscreensaver option is passed to mplayer if the screensaver
   is not to be disabled.
 * Added two new options for the subtitle menu: Size+ and Size-. They change
   the subtitle size. This also changes the meaning of the Scale setting in
   Preferences->Subtitles, it specifies now the default subtitle size for 
   new videos.
   These new options use the new mplayer slave command sub_scale, so changing
   the size won't require to restart mplayer. Unfortunately this doesn't work
   with the SSA/ASS lib, in this case mplayer will be restarted.
   If you use an old version of mplayer which doesn't have the sub_scale 
   slave command, you need to set to "true" the following option in the 
   config file: change_sub_scale_requires_restart

(2007-10-22)
 * Reorganized the layout of Preferences->Subtitles.
 * Preferences->Keyboard and mouse: the list of available actions for mouse
   buttons has been reduced. Only the most useful for mouse buttons are there.
 * Now the middle click button is also configurable. The default action is
   mute.
 * Now the default icon theme is Nuvola.
 * Added two new options in Preferences->Performance for H.264 videos:
   Skip loop filter (the famous "-lavdopts skiploopfilter=all") and
   Skip frames. 